...
    topContentPadding: Dp = 0.dp,
) {
    if (content.photos.isEmpty()) {
        ChalkakEmptyPostContent(
            modifier = modifier,
            testTag = DISPLAY_EMPTY_TEST_TAG,
            title = "이 날 올라온 사진이 없어요",
            description = null,
        )
    } else {
        DisplayPhotoGrid(
            photos = content.photos,
            state = gridState,
...
            },
            modifier = modifier,
        )
    }
}

const val DISPLAY_EMPTY_TEST_TAG = "display-empty"

@Composable
fun DisplayErrorContent(
    message: String,
    onRetryClick: () -> Unit = {},
    modifier: Modifier = Modifier,
...
